# InventoryAI

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.display  Dockerfile.firebase_sync  Dockerfile.inference  GEMINI.md  README.md  docker-compose.mac.yml  docker-compose.yml  firestore.rules  pyproject.toml  requirements.display.txt  requirements.inference.txt  requirements.txt
.github/workflows/: ci.yml
scripts/: demo.sh  live_view.py  seed_skus.py  test_hailo.py
src/camera/: main.py  schemas.py
src/display/: buffer.py  main.py  schemas.py
src/display/renderers/: area.py  batch.py  bundle.py
src/firebase_sync/: main.py  schemas.py
src/gateway/: config.py  loops.py  main.py  schemas.py  state.py
src/gateway/dashboard/: app.js  index.html  style.css
src/gateway/modes/: area_monitor.py  base.py  batch_count.py  bundle_check.py
src/inference/: main.py  schemas.py
tests/: conftest.py  test_area_monitor.py  test_batch_count.py  test_bundle_check.py  test_camera.py  test_firebase_sync.py  test_gateway_integration.py  test_inference.py
