[project]
name = "inventoryai"
version = "0.1.0"
description = "AI-powered parts counting system for RPi5 + Hailo-8"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "C90", "S", "B", "UP"]
ignore = ["UP017", "UP045"]  # Python 3.10+ type syntax; local test env may be 3.9

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106"]
# S311: mock inference uses random for non-cryptographic test data generation
# B008: File(...) in function signature is standard FastAPI pattern
"src/inference/main.py" = ["S311", "B008"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
